# raylib-osu

./: .gitignore  CMakeLists.txt  README.md  circles.txt  current_song.txt  funk_output.wav.REMOVED.git-id  input.wav.REMOVED.git-id  osu.db  output.wav.REMOVED.git-id  output_beats.txt  random_circles_uptown_funk.txt  windows_steps.bat  yt-dlp.exe.REMOVED.git-id
sources/: backup.cpp  main.cpp  removed.cpp
src/: database.cpp  database.h  linux.cpp  main.cpp  wav_to_beats.cpp  windows.cpp
